remove almost all screenshots

--- a/docs/authentication/configuration/email-sms-templates.mdx
+++ b/docs/authentication/configuration/email-sms-templates.mdx
@@ -11,7 +11,9 @@ The template editor enables you to change the wording and styling so that it is 
 
 It is also a useful way to translate the content to another target language in the case that English is not the default locale of your application.
 
-## Terminology
+## Before you start
+
+### Terminology
 
 It will be useful to take a look at the following terms as they will reappear in the rest of the guide:
 
@@ -21,50 +23,6 @@ It will be useful to take a look at the following terms as they will reappear in
 | variables | Also known as merge tags in the context of email marketing, these are placeholders that are replaced with dynamic data when the actual email or SMS is being sent to the recipient. |
 | WYSIWYG | Stands for 'What You See Is What You Get.' This term is used for editors and design tools that allow you create content or layout in a visual manner (i.e. without requiring you to edit the underlying markup) so that you can instantly see how the result is going to display to your users. |
 | blocks | Email WYSIWYG editors enable you to use blocks, rows, and columns in order to control the layout of their content (this is then transpiled to table-based HTML). |
-
-## Available templates
-
-Clerk allows you to modify the templates listed below.
-
-### Email
-
-To access the email templates:
-
-1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/email).
-2. In the navigation sidebar, select **Customization > Emails**.
-
-The following templates are available for customization:
-
-| Template Name | Description |
-| --- | --- |
-| [Invitation](https://dashboard.clerk.com/last-active?path=customization/email/invitation/edit) | Email sent to invite a user to join your application |
-| [Magic link - Sign in](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_in/edit) | Email containing magic link to allow the user to sign in without providing a password |
-| [Magic link - Sign up](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_up/edit) | Email containing magic link that invites the user to sign up |
-| [Magic link - Verify email](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_user_profile/edit) | Email containing magic link to verify the ownership of an email address |
-| [Password changed](https://dashboard.clerk.com/last-active?path=customization/email/password_changed/edit) | Email notifying the user that their password has been changed |
-| [Password removed](https://dashboard.clerk.com/last-active?path=customization/email/password_removed/edit) | Email notifying the user that their password has been removed |
-| [Primary email address changed](https://dashboard.clerk.com/last-active?path=customization/email/primary_email_address_changed/edit) | Email notifying the user that their primary email address has been updated |
-| [Reset password code](https://dashboard.clerk.com/last-active?path=customization/email/reset_password_code/edit) | Email containing an OTP (One Time Password) code that allows the user to reset their password |
-| [Verification code](https://dashboard.clerk.com/last-active?path=customization/email/verification_code/edit) | Email containing an OTP (One Time Password) code for verifying account access |
-
-### SMS
-
-To access the SMS templates:
-
-1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/sms).
-2. In the navigation sidebar, select **Customization > SMS**.
-
-The following templates are available for customization:
-
-| Template Name | Description |
-| --- | --- |
-| [Invitation](https://dashboard.clerk.com/last-active?path=customization/sms/invitation/edit) | SMS sent to invite a user to join your application |
-| [Password changed](https://dashboard.clerk.com/last-active?path=customization/sms/password_changed/edit) | SMS notifying the user that their password has been changed |
-| [Password removed](https://dashboard.clerk.com/last-active?path=customization/sms/password_removed/edit) | SMS notifying the user that their password has been removed |
-| [Reset password](https://dashboard.clerk.com/last-active?path=customization/sms/reset_password_code/edit) | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
-| [Verification code](https://dashboard.clerk.com/last-active?path=customization/sms/verification_code/edit) | SMS containing an OTP (One Time Password) code for verifying account access |
-
-## Before you start
 
 ### Revolvapp WYSIWYG email editor plugin
 
@@ -102,20 +60,16 @@ Please consult the following sub-sections to see which operations are available 
 
 Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding.
 
-To edit a template,
-1. Navigate to the Clerk Dashboard.
-2. In the navigation sidebar, select **Customization**.
-3. In the dropdown, select the **[Email](https://dashboard.clerk.com/last-active?path=customization/email)** or **[SMS](https://dashboard.clerk.com/last-active?path=customization/sms)** template listing page.
-4. Select the desired template card.
-
-Once changes are made, select the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance.
-
 Templates are editable:
 
 - On the development instance of applications on any subscription plan (free or paid)
 - On the staging and production instances of paid plans
 
 This allows you freely test the templating feature on your development environment to see if it fits your individual use case before deciding on a plan upgrade.
+
+To learn more about editing email templates, refer to the [Edit email templates](#edit-email-templates) section.
+
+To learn more about editing SMS templates, refer to the [Edit SMS templates](#edit-sms-templates) section.
 
 ### Preview
 
@@ -157,23 +111,23 @@ To copy to another instance, you will need to first select the **Copy** button i
 
 Since this change will override the current state of the template on the target instance, you will be asked to confirm your choice.
 
-## Email template editor
+## Edit email templates
 
-The email template editor is comprised of [template settings](#template-settings) & the WYSIWYG editor.
+To access the email templates:
 
-The WYSIWYG editor is split into two parts:
-
-- [The toolbar](#toolbar-controls)
-- [The text area](#text-area-controls)
-
-Since the toolbar exposes quite a few tools, we will examine them in more detail in the following sub-sections.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/WYSIWYG-editor.jpg"
-alt="The 'WYSIWG' editor with a red box around the toolbar and a red box around the text area. Both sections are labeled accordingly."
-/>
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/email).
+2. In the navigation sidebar, select **Customization > Emails**.
+3. Select a template to edit. The following templates are available for customization:
+    - [Invitation](https://dashboard.clerk.com/last-active?path=customization/email/invitation/edit) - Email sent to invite a user to join your application
+    - [Magic link - Sign in](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_in/edit) - Email containing magic link to allow the user to sign in without providing a password
+    - [Magic link - Sign up](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_up/edit) - Email containing magic link that invites the user to sign up
+    - [Magic link - Verify email](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_user_profile/edit) - Email containing magic link to verify the ownership of an email address
+    - [Password changed](https://dashboard.clerk.com/last-active?path=customization/email/password_changed/edit) - Email notifying the user that their password has been changed
+    - [Password removed](https://dashboard.clerk.com/last-active?path=customization/email/password_removed/edit) - Email notifying the user that their password has been removed
+    - [Primary email address changed](https://dashboard.clerk.com/last-active?path=customization/email/primary_email_address_changed/edit) - Email notifying the user that their primary email address has been updated
+    - [Reset password code](https://dashboard.clerk.com/last-active?path=customization/email/reset_password_code/edit) - Email containing an OTP (One Time Password) code that allows the user to reset their password
+    - [Verification code](https://dashboard.clerk.com/last-active?path=customization/email/verification_code/edit) - Email containing an OTP (One Time Password) code for verifying account access
+4. Once you have selected a template, you will be presented with the [template settings](#email-template-settings) & [the WYSIWYG editor](#email-wysiwyg-editor).
 
 ### Email template settings
 
@@ -186,7 +140,7 @@ Out of the box, Clerk will deliver your emails using its own Email Service Provi
 This means that Clerk will no longer be sending this particular email and in order to deliver it yourself, you will need to listen to the `emails.created` webhook and extract the necessary info from the event payload.
 
 <Callout type="info">
-  This is a per-template setting.
+  Remember, this is a per-template setting and will not be applied to other templates.
 </Callout>
 
 #### Name
@@ -201,182 +155,64 @@ Clerk will populate the **From** email address with:
 
 The local part depends on the type of email sent ('verification code', 'invitation', etc).
 
-If you wish to override the local part with your own value, e.g. 'accounting', 'sales', etc, then set that value in the provided input.
+If you wish to override the local part with your own value, such as 'accounting', 'sales', etc., then set that value in the provided input.
 
-### Toolbar controls
+### Email WYSIWYG editor
 
-The toolbar contains two types of controls:
+The email WYSIWYG editor is split into two parts:
 
-1. Buttons - expose a sub-menu with more settings you can apply to the currently selected block or text.
-2. Toggles - switch the editor to another view mode, in which all other tools become disabled. To exit the current mode, you will need to toggle back.
+- [The toolbar](#toolbar-controls)
+- [The text area](#text-area-controls)
 
-#### Shortcuts button
-
-Opens a popup with the keyboard shortcuts that the editor supports.
+Since the toolbar exposes quite a few tools, we will examine them in more detail in the following sub-sections.
 
 <Images
 width={3024}
 height={1652}
-src="/docs/images/authentication/email-sms-options/editor-shortcuts.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Shortcuts' icon in the toolbar of the 'Email body' WYSIWG editor."
+src="/docs/images/authentication/email-sms-options/WYSIWYG-editor.jpg"
+alt="The 'WYSIWG' editor with a red box around the toolbar and a red box around the text area. Both sections are labeled accordingly."
 />
 
-#### Mobile view toggle
+#### Toolbar controls
 
-Shows how the email will render on a mobile device with a portrait aspect ratio.
+The toolbar is located at the top of the editor and contains the following controls, in order from left to right:
 
-Select the mobile view toggle again to return to desktop view.
+- **Shortcut** button - Opens a popup with the keyboard shortcuts that the editor supports.
+- **Mobile view** toggle - Shows how the email will render on a mobile device with a portrait aspect ratio. Select the mobile view toggle again to return to desktop view.
+- **HTML mode** toggle - Switches the editor to source mode. The source format is Revolvapp's own template syntax as mentioned in the [Before you start](/docs/authentication/configuration/email-sms-templates#handlebars-templating-language) section. For this tool to appear, you will need to unselect any currently selected block. To exit HTML/source mode, select the toggle again.
+- **Background** button - Allows selecting a color or image as a background for the currently selected block.
+- **Settings** button - Opens a popup with settings contextually based on the selected block or text.
 
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-mobile-view.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Mobile view' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
+For the following controls to appear, you will need to select an existing element in the text area. These controls will not be visible otherwise.
 
-#### HTML mode toggle
+- **Add block** button - Allows you to insert a new block of content. For the button to appear, you will need to select the existing block below which you would like the new block to be inserted. The editor comes with a number of predefined blocks such as blocks with a header, image, button, multiple columns, etc.
+- **Alignment** button - Enables horizontal alignment (left, right or center). For the button to appear, you will need to select an element that can be aligned, such as a text node.
+- **Link** button - Converts a selected text fragment into a link. Users can configure the link text and the URL that the link should point to. For the button to appear, you will need to select an element that can be turned into a link, such as a text node.
+- **Text color** button - Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to select inside a text node.
+- **Variable** button - Shows a dropdown with the available variables for the current template. For the button to appear, you will need to select inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
+- **Border** button - Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to select an element that allows borders, such as a button.
 
-Switches the editor to source mode. The source format is Revolvapp's own template syntax, which is HTML-like and transpiles to HTML that can be rendered by browsers and email clients.
+#### Text area controls
 
-For this tool to appear, you will need to unselect any currently selected block.
-
-To exit HTML/source mode, select the toggle again.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-code.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'HTML' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Background button
-
-Allows selecting a color or image as a background for the currently selected block.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-background.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Background' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Settings button
-
-Opens a popup with settings contextually based on the selected block or text.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-settings.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Settings' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Add block button
-
-Allows you to insert a new block of content. For the button to appear, you will need to select the existing block below which you would like the new block to be inserted.
-
-The editor comes with a number of predefined blocks such as blocks with a header, image, button, multiple columns, etc.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-add-block.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Add block' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Alignment button
-
-Enables horizontal alignment (left, right or center). For the button to appear, you will need to select an element that can be aligned, such as a text node.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-alignment.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Alignment' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Link button
-
-Converts a selected text fragment into a link. Users can configure the link text and the URL that the link should point to. For the button to appear, you will need to select an element that can be turned into a link, such as a text node.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-link.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Link' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Text color button
-
-Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to select inside a text node.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-text-color.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Color' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Variable button
-
-Shows a dropdown with the available variables for the current template. For the button to appear, you will need to select inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-variables.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Variable' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-#### Border button
-
-Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to select an element that allows borders, such as a button.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-border.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Border' icon in the toolbar of the 'Email body' WYSIWG editor."
-/>
-
-### How to make buttons & links inherit your theme colors
-
-As you may have noticed, the links and buttons in the Clerk-provided templates automatically show in the colors selected in the **Customization > Theme** section. Specifically:
-
-The color of buttons and links in your emails maps to the primary color set in your theme
-The font color of buttons in your emails maps to the button text color set in your theme
-Since you may not want all buttons or links to have this behavior, you will need to opt in by using the following classes:
-
-- `cl-branded-button` - for buttons
-- `cl-branded-link` - for links
-
-These classes can be added as attributes to the Revolvapp template markup after toggling the editor to HTML (i.e. source) mode.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/cl-branded-button-class.jpg"
-alt="The 'Invitation' email template customization page. The 'email body' WSYIWG editor is toggled to HTML mode. There is a red arrow pointing to the 'cl-branded-button' class."
-/>
-
-### Text area controls
-
-The email editor text area is intended mainly for authoring content. Though, if you select a block, a set of tools will also appear:
+The email WYSIWYG editor text area is intended mainly for authoring content. Though, if you select a block, a set of tools will also appear. In order from top to bottom, these are:
 
 - **Move handle** - Allows the selected block to be moved up or down with regard to its sibling blocks
 - **Delete** - Removes the block from the template
 - **Clone** - Clones the block using the exact same settings
 
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/editor-text-area-controls.jpg"
-alt="The 'Invitation' email template customization page. The 'Accept invitation' button has been clicked, revealing a small toolbar. There is a red box around the toolbar with a red arrow pointing to it."
-/>
+## Edit SMS templates
 
-## SMS template editor
+To access the SMS templates:
 
-The SMS editor is much simpler to use since SMS supports plain text only. You can edit the message contents to your liking via the provided text area. You can also set up template settings according to your needs.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/sms).
+2. In the navigation sidebar, select **Customization > SMS**.
+3. Select a template to edit. The following templates are available for customization:
+    - [Invitation](https://dashboard.clerk.com/last-active?path=customization/sms/invitation/edit) - SMS sent to invite a user to join your application
+    - [Password changed](https://dashboard.clerk.com/last-active?path=customization/sms/password_changed/edit) - SMS notifying the user that their password has been changed
+    - [Password removed](https://dashboard.clerk.com/last-active?path=customization/sms/password_removed/edit) - SMS notifying the user that their password has been removed
+    - [Reset password](https://dashboard.clerk.com/last-active?path=customization/sms/reset_password_code/edit) - SMS containing an OTP (One Time Password) code that allows the user to reset their password
+    - [Verification code](https://dashboard.clerk.com/last-active?path=customization/sms/verification_code/edit) - SMS containing an OTP (One Time Password) code for verifying account access
+4. Once you have selected a template, you will be presented with the [template settings](#sms-template-settings) & [the text area](#sms-text-area).
 
 ### SMS template settings
 
@@ -389,26 +225,25 @@ Out of the box, Clerk will deliver your SMS messagess using its own SMS Gateway.
 This means that Clerk will no longer be sending this particular SMS and in order to deliver it yourself, you will need to listen to the `sms.created` webhook and extract the necessary info from the event payload.
 
 <Callout type="info">
-  This is a per-template setting.
+  Remember, this is a per-template setting and will not be applied to other templates.
 </Callout>
 
 #### Name
 
 **Name** is the template name and represents a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing SMS message in any way.
 
-#### Variable widget
+### SMS text area
 
-To insert a variable at the current cursor position, select the corresponding variable badge in the variable widget that is located adjacent to the text area.
+The text area is where you can author the content of the SMS message.
 
-Note that the invitation template supports public invitation metadata, whereas the verification code template supports public user metadata (in the case that a user already exists).
+#### Insert variables
+
+To insert a variable at the current cursor position, select the corresponding variable badge adjacent to the text area.
+
+<Callout type="info">
+  The **Invitation** template supports public invitation metadata, whereas the **Verification code** template supports public user metadata (in the case that a user already exists).
+</Callout>
 
 You can interpolate a particular metadata key as follows:
 
 `{{invitation.public_metadata.foo.bar}}`
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/sms-variables.jpg"
-alt="The 'Invitation' SMS template customization page. There is a red box around the 'Insert variables' section."
-/>
