update all titles for saml guides

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -1,9 +1,9 @@
 ---
-title: Microsoft Azure AD
+title: Use Microsoft Azure AD for SAML SSO
 description: Learn how to integrate Microsoft Azure AD with Clerk using SAML SSO.
 ---
 
-# Microsoft Azure AD
+# Use Microsoft Azure AD for SAML SSO
 
 <TutorialHero
   beforeYouStart={[
