--- a/docs/authentication/saml/custom-provider.mdx
+++ b/docs/authentication/saml/custom-provider.mdx
@@ -1,9 +1,9 @@
 ---
-title: Custom provider
+title: Use a custom Identity Provider for SAML SSO
 description: Learn how to integrate an Identity Provider with Clerk using SAML SSO.
 ---
 
-# Custom provider
+# Use a custom Identity Provider for SAML SSO
 
 <TutorialHero
   beforeYouStart={[
