--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -1,9 +1,9 @@
 ---
-title: Google Workspace
+title: Use Google Workspace for SAML SSO
 description: Learn how to integrate Google Workspace with Clerk using SAML SSO.
 ---
 
-# Google Workspace
+# Use Google Workspace for SAML SSO
 
 <TutorialHero
   beforeYouStart={[
