--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -1,9 +1,9 @@
 ---
-title: Okta Workforce
+title: Use Okta Workforce for SAML SSO
 description: Learn how to integrate Okta Workforce with Clerk using SAML SSO.
 ---
 
-# Okta Workforce
+# Use Okta Workforce for SAML SSO
 
 <TutorialHero
   beforeYouStart={[
