--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -27,6 +27,8 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 
 ### `getOrganization` example
 
+The following example demonstrates how to retrieve information about the currently active organization.
+
 <InjectKeys>
 
 <Tabs type="npm-script" items={['NPM module', '<script>']}>
@@ -41,10 +43,21 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 
     if (clerk.user) {
       if (clerk.organization.id) {
-        const organization = await clerk.getOrganization(clerk.organization.id);
-        console.log(organization);
+        await clerk.getOrganization(clerk.organization.id)
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
       } else {
-        console.log("User is not a member of an organization");
+        // If there is no active organization,
+        // mount Clerk's <OrganizationSwitcher />
+        // to allow the user to set an organization as active
+        document.getElementById("app").innerHTML = `
+          <h2>Select an organization to set it as active</h2>
+          <div id="org-switcher"></div>
+        `;
+
+        const orgSwitcherDiv = document.getElementById("org-switcher");
+
+        clerk.mountOrganizationSwitcher(orgSwitcherDiv);
       }
     } else {
       document.getElementById("app").innerHTML = `
@@ -96,10 +109,21 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
 
       if (Clerk.user) {
         if (Clerk.organization.id) {
-          const organization = await Clerk.getOrganization(Clerk.organization.id);
-          console.log(organization);
+          await Clerk.getOrganization(Clerk.organization.id)
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
         } else {
-          console.log("User is not a member of an organization");
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
         }
       } else {
         const signInDiv = document.getElementById("sign-in");
@@ -149,18 +173,11 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 
     if (clerk.user) {
       const createOrgButton = document.getElementById("create-org-button");
-      createOrgButton.onclick = function () {
-        clerk
-          .createOrganization({
-            name: "test-2",
-          })
-          .then((org) => {
-            console.log(org);
-          })
-          .catch((error) => {
-            console.error(error);
-          });
-      };
+      createOrgButton.addEventListener("click", () => {
+        clerk.createOrganization({ name: "test" })
+          .then((res) => console.log(res))
+          .catch((error) => console.log("An error occurred:", error.errors));
+      });
     } else {
       document.getElementById("app").innerHTML = `
         <div id="sign-in"></div>
@@ -213,18 +230,11 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 
       if (Clerk.user) {
         const createOrgButton = document.getElementById("create-org-button");
-        createOrgButton.onclick = function () {
-          clerk
-            .createOrganization({
-              name: "test-2",
-            })
-            .then((org) => {
-              console.log(org);
-            })
-            .catch((error) => {
-              console.error(error);
-            });
-        };
+        createOrgButton.addEventListener("click", () => {
+          Clerk.createOrganization({ name: "test" })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        });
       } else {
         const signInDiv = document.getElementById("sign-in");
 
@@ -237,62 +247,3 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 </Tabs>
 
 </InjectKeys>
-
-### `createOrganization()` example
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-```javascript filename="index.js" {7-24}
-  import Clerk from '@clerk/clerk-js';
-
-  // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
-  await clerk.load();
-
-  // Create an organization
-  const org = await clerk.createOrganization({
-    name: 'My Organization',
-    slug: 'my-organization',
-  });
-
-  // org will be the newly created Organization object
-  // you can use org however you would like moving forward,
-  // for example, check the org ID:
-  console.log(org.id);
-```
-
-```html filename="index.html" {18-28}
-  <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
-
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      // Create an organization
-      const org = await window.Clerk.createOrganization({
-        name: 'My Organization',
-        slug: 'my-organization',
-      });
-
-      // org will be the newly created Organization object
-      // you can use org however you would like moving forward,
-      // for example, check the org ID:
-      console.log(org.id);
-    });
-    document.body.appendChild(script);
-  </script>
-```
-</CodeBlockTabs>
-
-[org-ref]: /docs/references/javascript/organization/organization
-[orgmem-ref]: /docs/references/javascript/organization-membership
