Add info on infinite redirects and required headers
This PR adds:

- Info about Next versions that encounter infinite redirect issues
- A list of required headers for authentication

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -61,3 +61,7 @@ To see an example of Clerk's features, such as user and organization management,
 
 - [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
 - [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
+
+## Next.js infinite redirect issues
+
+Projects using `@clerk/nextjs@v4` will encounter infinite redirect loops when running a Next.js version between `>=13.4.13-canary.0` and `<=13.5.4`. This is because of [a bug](https://github.com/vercel/next.js/pull/56797) related to `x-forwarded-*` in those versions of Next.js.
