Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -12,7 +12,7 @@ description: Learn how to integrate Clerk into your Firebase application.
       link: "/docs/quickstarts/setup-clerk",
     },
     {
-      title: "Set up a local project",
+      title: "Integrate the appropriate Clerk SDK to your application",
       link: "/docs/quickstarts/overview",
     },
   ]}
