Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -31,14 +31,24 @@ Integrating Firebase with Clerk gives you the benefits of using Firebase's NoSQL
 
 To get started:
 1. Navigate to the Clerk Dashboard.
-1. In the sidebar, select **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)**, and toggle the Firebase integration on.
+2. In the sidebar, select **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)**.
+3. Toggle the **Firebase** integration on. The configuration modal will appear. Keep this open while you configure your Firebase project.
 
-The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase's API. To do so, you can upload your Firebase project's service account key JSON file to configure the integration automatically.
+The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase's API. To configure the integration, you can either:
+- [upload your Firebase project's service account key JSON file to configure the integration automatically](#upload-service-account-key)
+- [manually provide the required information about your Firebase project](#configure-firebase-manually)
+
+#### Upload service account key
+
+#### Configure firebase manually
 
 To generate a service account key:
 
-1. Visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk) in your Firebase project.
-1. Near the bottom of the page, select **Generate New Private Key** and save the file.
+1. In your Firebase project, visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk).
+2. Near the bottom of the page, select the **Generate new private key** button.
+3. In the modal that pops up, select the **Generate key** button to download the JSON file that contains your service account key.
+4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key" button and upload the JSON file you downloaded.
+5. The appropriate fields in the configuration modal will be filled in automatically. Select **Apply changes** to save your configuration.
 
 See [the manual configuration instructions](#configure-firebase-manually) if you don't want to use a service account key.
 
@@ -47,10 +57,11 @@ See [the manual configuration instructions](#configure-firebase-manually) if you
 To use Firebase auth, ensure authentication is enabled in your Firebase dashboard. To do so:
 
 1. Navigate to your Firebase dashboard.
-1. In the sidebar navigation, expand **Build** and select **Authentication**.
-1. Enable authentication on this page, and enable any sign-in method you want, such as **Email/Password**.
+1. In the navigation sidebar, select the **Build** dropdown and select [**Authentication**](https://console.firebase.google.com/u/0/project/_/authentication).
+2. Select **Get started**.
+3. Enable any sign-in method you want, such as **Email/Password**.
 
-### Add a Security Rule to your Firestore database
+### Add a Security Rule to your Firestore database (optional)
 
 To use Firestore with Clerk, ensure that you have defined [Security Rules](https://firebase.google.com/docs/firestore/security/get-started) that allow authenticated requests to access your database. For example:
 
@@ -69,7 +80,7 @@ service cloud.firestore {
 To connect to your Firebase app in your code, you need a config object from your Firebase project. To find it:
 
 1. Visit [your Firebase project settings](https://console.firebase.google.com/project/_/settings/general/).
-1. Scroll down to the setup code snippet on this page, and copy the config. It should be similar to the following:
+1. In the **Your apps** section, there should be a code snippet that includes the `firebaseConfig` object. Copy this object. It should look similar to the following:
     ```typescript
     const firebaseConfig = {
       apiKey: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
@@ -88,10 +99,14 @@ See [Google's Firebase documentation](https://support.google.com/firebase/answer
 
 ### Use Firebase with Clerk in your code
 
+Now that you have configured the integration, and you have retrieved your Firebase config object, it's time to use Firebase with Clerk in your code.
+
 The following example:
 - Uses Clerk to generate an authentication token for Firebase's API.
 - Creates a button for signing into your Firebase app.
 - Creates a button for fetching example data from your Firestore database.
+
+This example is written for Next.js App Router, but is supported by any React meta framework, such as Remix or Gatsby.
 
 ```tsx filename="app/firebase/page.tsx"
 "use client";
@@ -116,6 +131,7 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 // Connect to your Firestore database
 const db = getFirestore(app);
+// Connect to Firebase auth
 const auth = getAuth(app);
 
 const getFirestoreData = async () => {
@@ -170,7 +186,7 @@ If you want to manually configure your Firebase integration, you must provide Cl
 
     <Cards title="Use webhooks to sync Firebase data with Clerk" description="Learn how to sync Firebase auth or Firestore data with Clerk data using webhooks." link="/docs/integrations/webhooks/sync-data" cta="Learn More" />
 
-    <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
+    <Cards title="Create custom sign-up and sign-in pages in your Next.js app" description="Learn how add custom sign-up and sign-in pages with Clerk components in your Next.js application." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
     <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
 
