Add explanation of how and why firebase auth is used

--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -12,7 +12,11 @@ description: Learn how to integrate Clerk into your Firebase application.
       link: "/docs/quickstarts/setup-clerk",
     },
     {
-      title: "Integrate the appropriate Clerk SDK to your application",
+      title: "Set up a Firebase project with an app",
+      link: "https://support.google.com/firebase/answer/9326094?hl=en",
+    },
+    {
+      title: "Integrate the appropriate Clerk SDK in your local project",
       link: "/docs/quickstarts/overview",
     },
   ]}
@@ -23,24 +27,25 @@ description: Learn how to integrate Clerk into your Firebase application.
 
 </TutorialHero>
 
-Integrating Firebase with Clerk gives you the benefits of using Firebase's NoSQL database while leveraging Clerk's authentication, prebuilt components, and webhooks.
+Integrating Firebase with Clerk gives you the benefits of using Firebase's features while leveraging Clerk's authentication, prebuilt components, and webhooks.
 
 <Steps>
 
 ### Configure the integration 
 
+The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase Auth. This enables you to leverage Clerk's prebuilt components, auth provider options, and more, while accessing Firebase products like Firestore with a session validated by Firebase Auth.
+
 To get started:
+
 1. Navigate to the Clerk Dashboard.
 2. In the sidebar, select **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)**.
 3. Toggle the **Firebase** integration on. The configuration modal will appear. Keep this open while you configure your Firebase project.
 
-The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase's API. To configure the integration, you can either:
+To configure the integration, you can either:
 - [upload your Firebase project's service account key JSON file to configure the integration automatically](#upload-service-account-key)
 - [manually provide the required information about your Firebase project](#configure-firebase-manually)
 
 #### Upload service account key
-
-#### Configure firebase manually
 
 To generate a service account key:
 
