--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -52,7 +52,7 @@ To generate a service account key:
 1. In your Firebase project, visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk).
 2. Near the bottom of the page, select the **Generate new private key** button.
 3. In the modal that pops up, select the **Generate key** button to download the JSON file that contains your service account key.
-4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key" button and upload the JSON file you downloaded.
+4. In the Clerk Dashboard, the Firebase configuration modal should still be open. Select the **Upload service account key** button and upload the JSON file you downloaded.
 5. The appropriate fields in the configuration modal will be filled in automatically. Select **Apply changes** to save your configuration.
 
 See [the manual configuration instructions](#configure-firebase-manually) if you don't want to use a service account key.
