--- a/docs/authentication/configuration/email-sms-templates.mdx
+++ b/docs/authentication/configuration/email-sms-templates.mdx
@@ -21,8 +21,8 @@ It will be useful to take a look at the following terms as they will reappear in
 | --- | --- |
 | template name | User-friendly name of the template. This will be visible on the template listing page. |
 | variables | Also known as merge tags in the context of email marketing, these are placeholders that are replaced with dynamic data when the actual email or SMS is being sent to the recipient. |
-| WYSIWYG | Stands for 'What You See Is What You Get.' This term is used for editors and design tools that allow you create content or layout in a visual manner (i.e. without requiring you to edit the underlying markup) so that you can instantly see how the result is going to display to your users. |
-| blocks | Email WYSIWYG editors enable you to use blocks, rows, and columns in order to control the layout of their content (this is then transpiled to table-based HTML). |
+| WYSIWYG | Stands for 'What You See Is What You Get.' This term is used for editors and design tools that allow you to create content or layouts in a visual manner (without requiring you to edit the underlying markup) so that you can instantly see how the result is going to display to your users. |
+| blocks | Email WYSIWYG editors enable you to use blocks, rows, and columns in order to control the layout of their content. This is then transpiled to table-based HTML. |
 
 ### Revolvapp WYSIWYG email editor plugin
 
@@ -36,13 +36,11 @@ Revolvapp allows the user to design the template using blocks and under the hood
 
 Both the email and SMS editor use the [Handlebars](https://handlebarsjs.com/) templating language for the interpolation of dynamic values into your content via variables. It is a well established language, especially popular in the Javascript ecosystem, which has been adopted by leading Email Service Providers (ESPs) for templating as well.
 
-The most core Handlebars concept you should bear in mind is that in order to output a variable, you should wrap its name within double curly braces. For example: `{{app.name}}`. When the message is to be sent, this will be replaced with the actual name of the application.
+The most core Handlebars concept you should bear in mind is that variables are wrapped in double curly braces. For example: `{{app.name}}`. When the message is to be sent, the variable will be replaced with the actual value, which in this example would be the name of the application.
 
-Using the variable insertion widgets, the variables will be inserted into the content at the desired position, so there is no need to write them by hand. Though, you can still do so if you like.
+When editing a template in the Clerk Dashboard, you can insert variables at the desired position, so there is no need to write them by hand. Though, you can still do so if you like.
 
 For further information on Handlebars, we recommend you take a look at the [official guides](https://handlebarsjs.com/guide/).
-
-There will definitely be a learning curve before you master both Revolvapp syntax and Handlebars, but there's no doubt that you will be crafting beautiful templates in no time!
 
 <Callout type="info">
   In order to unescape special characters, you may need to wrap variables in triple curly braces. For example: `{{{app.name}}}`. This will allow special characters (e.g. `'`, `&`) to appear as displayed and not as escaped HTML entities (e.g. `&apos;`, `&amp;`).
@@ -164,41 +162,32 @@ The email WYSIWYG editor is split into two parts:
 - [The toolbar](#toolbar-controls)
 - [The text area](#text-area-controls)
 
-Since the toolbar exposes quite a few tools, we will examine them in more detail in the following sub-sections.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/WYSIWYG-editor.jpg"
-alt="The 'WYSIWG' editor with a red box around the toolbar and a red box around the text area. Both sections are labeled accordingly."
-/>
-
 #### Toolbar controls
 
 The toolbar is located at the top of the editor and contains the following controls, in order from left to right:
 
-- **Shortcut** button - Opens a popup with the keyboard shortcuts that the editor supports.
-- **Mobile view** toggle - Shows how the email will render on a mobile device with a portrait aspect ratio. Select the mobile view toggle again to return to desktop view.
-- **HTML mode** toggle - Switches the editor to source mode. The source format is Revolvapp's own template syntax as mentioned in the [Before you start](/docs/authentication/configuration/email-sms-templates#handlebars-templating-language) section. For this tool to appear, you will need to unselect any currently selected block. To exit HTML/source mode, select the toggle again.
-- **Background** button - Allows selecting a color or image as a background for the currently selected block.
-- **Settings** button - Opens a popup with settings contextually based on the selected block or text.
+- **Shortcut** button
+- **Mobile view** toggle
+- **HTML mode** toggle - For this tool to appear, you will need to unselect any currently selected block.
+- **Background** button
+- **Settings** button
 
 For the following controls to appear, you will need to select an existing element in the text area. These controls will not be visible otherwise.
 
-- **Add block** button - Allows you to insert a new block of content. For the button to appear, you will need to select the existing block below which you would like the new block to be inserted. The editor comes with a number of predefined blocks such as blocks with a header, image, button, multiple columns, etc.
-- **Alignment** button - Enables horizontal alignment (left, right or center). For the button to appear, you will need to select an element that can be aligned, such as a text node.
-- **Link** button - Converts a selected text fragment into a link. Users can configure the link text and the URL that the link should point to. For the button to appear, you will need to select an element that can be turned into a link, such as a text node.
-- **Text color** button - Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to select inside a text node.
-- **Variable** button - Shows a dropdown with the available variables for the current template. For the button to appear, you will need to select inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
-- **Border** button - Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to select an element that allows borders, such as a button.
+- **Add block** button
+- **Alignment** button
+- **Link** button
+- **Text color** button
+- **Variable** button
+- **Border** button
 
 #### Text area controls
 
 The email WYSIWYG editor text area is intended mainly for authoring content. Though, if you select a block, a set of tools will also appear. In order from top to bottom, these are:
 
-- **Move handle** - Allows the selected block to be moved up or down with regard to its sibling blocks
-- **Delete** - Removes the block from the template
-- **Clone** - Clones the block using the exact same settings
+- **Move handle**
+- **Delete**
+- **Clone**
 
 ## Edit SMS templates
 
