--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -17,15 +17,15 @@ In order to enable this feature:
 2. In the navigation sidebar, select **Organizations Settings**.
 3. In the **Verified domains** section, check the **Enable verified domains** checkbox.
 4. The following settings will appear:
-  - [**Enrollment mode**](#enrollment-mode) - Choose between `automatic_invitation` and `automatic_suggestion`.
+  - [**Enrollment mode**](#enrollment-mode) - Choose between **Automatic invitation** and **Automatic suggestion**.
   - [**Default role**](#default-role) - Choose the default role for users who join the organization through a verified domain.
 
 ### Enrollment mode
 
 You can enable the following enrollment modes to be available for your application:
 
-- `automatic_invitation` - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
-- `automatic_suggestion` - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
+- **Automatic invitation** - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
+- **Automatic suggestion** - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
 
 Once a domain is created and verified in your application, an administrator will have the option to enable whichever enrollment modes you made available.
 
